--- a/style-neu.css
+++ b/style-neu.css
@@ -36,6 +36,10 @@ html {
     text-align: center;
 }
 
+#theme {
+    text-align: center;
+}
+
 .title {
     margin-top: 20px;
     margin-bottom: 10px;
