--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ html {
     transition: 1s ease-in-out;
 }
 
+#theme {
+    text-align: center;
+}
+
 #main {
     width: 80%;
     max-width: 900px;
@@ -63,7 +67,8 @@ textarea {
 }
 
 /* highlight member count */
-.dight, #all-member-count {
+.dight,
+#all-member-count {
     font-size: 20px;
     color: var(--c1);
 }
