--- a/style-ai.css
+++ b/style-ai.css
@@ -24,9 +24,12 @@ html {
 }
 
 @keyframes move-bg {
-    0%, 100% {
+
+    0%,
+    100% {
         background-position: 0 0;
     }
+
     50% {
         background-position: 100% 0;
     }
@@ -50,8 +53,29 @@ html {
     transition: 1s ease-in-out;
 }
 
+#head::before {
+    content: "";
+    width: 50px;
+    height: 50px;
+    background: url(huang.png);
+    opacity: 0.8;
+    display: block;
+    position: absolute;
+    left: 20px;
+    top: 15px
+}
+
 #theme {
     text-align: center;
+}
+
+select {
+    background-color: rgba(255,255,255,0.3);
+    padding: 5px;
+}
+
+option {
+    font-size: 20px;
 }
 
 #main {
@@ -71,6 +95,12 @@ html {
     border-left: 10px solid var(--c2);
     text-align: left;
     padding-left: .5em;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
+    transition: all .3s;
+}
+
+.title:hover {
+    font-size: 25px;
 }
 
 .attach-info {
@@ -92,11 +122,14 @@ html {
     min-height: 5rem;
 }
 
-textarea,
-#result-show {
+textarea {
     position: relative;
     width: 90%;
     text-align: left;
+    font-size: 30px;
+    color: var(--c1);
+    font-weight: bold;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 /* highlight member count */
